@startuml


class App {
    ArrayList<toDoList> appLists
    void start(Stage stage)
    +void main()
}

class AppController {
    +void createList()
    +void removeList()
    +void editListTitle()

    +void addItem()
    +void editItem()
    +void removeItem()
    +void editDueDate()
    +void markComplete()

    +void sortByComplete()
    +void sortByIncomplete()

    +void saveAllItemToExtern()
    +void saveAllListsToExtern()
    +void loadSingleList()
    +void loadMultipleList()
}

class Item {
    +String description
    +LocalDate dueDate
    +bool Complete
    +Item(LocalDate dueDate, String description)
    +String getDescription()
    +void setDescription(String description)
    +LocalDate getDate()
    +setDate(LocalDate date)
}

class toDoList {
    +String Title
    +ArrayList<Items> listContent
}

toDoList *-- Item
App *-- toDoList




@enduml